--- a/prototype/css/prototype.css
+++ b/prototype/css/prototype.css
@@ -218,7 +218,7 @@ input[type="text"], input[type="submit"], input[type="button"] {
 	opacity: 0.75;
 }
 
-.footer-logo {
+.logo-footer {
 	margin-top: 20px;
 }
 
